--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ layout: default
         </div>
     </div>
 </div>	
-<div class="socials_left col-md-6 col-sm-12">
-    <h3>
-    	<img height="100" src="/images/home/collab.png">
+<div class="socials_left col-md-6 col-sm-12" style="padding-left: 100px;">
+    <h3 style="margin-top: 40px !important;">
+    	<img height="60" style="margin-right: 20px;" src="/images/home/collab.png">
 	{{ document.fragments.socials_header1.text }}
     </h3>
-    <h2>{{ document.fragments.socials_header2.text }}</h2>
+    <h3 style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.socials_header2.text }}</h3>
     <p>
 	{{ document.fragments.socials_text.text }}
     </p>
@@ -155,7 +155,7 @@ layout: default
     </div>
 </div>
 <div class="volunteers_big" style="text-align: center;">
-    <div class="volunteers_text" style="position: absolute; margin-top: 10vw; text-align: center;">
+    <div class="volunteers_text" style="position: absolute; margin-top: 35vw; text-align: center;">
 	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
     </div>
     <img width="100%" src="/images/home/Benevoles_half.png">
