--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ layout: default
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<div class="newsletter_cta col-md-6 col-sm-12">
+<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-left: 100px;">
     <h3 style="margin-top: 40px !important;">
-	<img height="100" src="/images/home/nl.png">
+	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
     </h3>
     <h3 style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.newsletter_text.text }}</h3>
