--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@ layout: default
 	{{ document.fragments.socials_text.text }}
     </p>
     <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" src="/images/home/insta_icon.png">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/insta_icon.png">
     </a>
     <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-    	<img height="30" src="/images/home/fb_icon.png">
+    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb_icon.png">
     </a>
     <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="24" src="/images/layout/twitter-icon.svg">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/layout/twitter-icon.svg">
     </a>
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	<img height="24" src="/images/layout/YouTube-icon.png">
+	<img height="30" style="margin-top: 30px;"  src="/images/layout/YouTube-icon.png">
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-left: 100px;">
+<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-bottom: 0px; padding-left: 100px;">
     <h3 style="margin-top: 40px !important;">
 	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
