--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ layout: default
         </div>
     </div>
 </div>	
-<div class="socials_left col-md-6 col-sm-12" style="padding-left: 100px;">
+<div class="socials_left col-md-6 col-sm-12" style="padding-left: 100px; height: 400px;">
     <h3 style="margin-top: 40px !important;">
     	<img height="60" style="margin-right: 20px;" src="/images/home/collab.png">
 	{{ document.fragments.socials_header1.text }}
@@ -127,7 +127,7 @@ layout: default
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-bottom: 0px; padding-left: 100px;">
+<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-bottom: 0px; padding-left: 100px; height: 400px;">
     <h3 style="margin-top: 40px !important;">
 	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
