--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ layout: default
     <p>{{ document.fragments.newsletter_gdpr.text }}</p>
 </div>
 		
-<div class="social_feed_section social_wall">
+<div class="social_feed_section social_wall" style="margin-top: 400px; padding-top: 20px;">
     <div class='container'>
         <h1 class="h1_big_news" style="color:white;">{{ document.fragments.social_wall_title.text }}</h1>
             <div class="row">
