--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@ layout: default
 	{{ document.fragments.socials_text.text }}
     </p>
     <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/insta_icon.png">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/in-icon-blue.png">
     </a>
     <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb_icon.png">
+    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb-icon-blue.png">
     </a>
     <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/layout/twitter-icon.svg">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-blue.png">
     </a>
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px;"  src="/images/layout/YouTube-icon.png">
+	<img height="30" style="margin-top: 30px;"  src="/images/home/yt-icon-blue.png">
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
