--- a/index.html
+++ b/index.html
@@ -182,5 +182,54 @@ layout: default
                 <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
             </li>
         </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Loyco.png" alt="Loyco">
+            </li>
+            <li>
+                <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
+            </li>
+            <li>
+                <img src="/images/cio-partners/ECA.png" alt="ECA">
+            </li>
+            <li>
+                <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
+            </li>
+            <li>
+                <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
+            </li>
+            <li>
+                <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
+            </li>
+        </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Eracom.png" alt="Eracom">
+            </li>
+            <li>
+                <img src="/images/cio-partners/EDC.png" alt="EDC">
+            </li>
+            <li>
+                <img src="/images/cio-partners/Ecal.png" alt="Ecal">
+            </li>
+            <li>
+                <img src="/images/cio-partners/EHL.png" alt="EHL">
+            </li>
+            <li>
+                <img src="/images/cio-partners/EPFL.png" alt="EPFL">
+            </li>
+            <li>
+                <img src="/images/cio-partners/HEMU.png" alt="HEMU">
+            </li>
+	    <li>
+                <img src="/images/cio-partners/CHUV.png" alt="CHUV">
+            </li>
+            <li>
+                <img src="/images/cio-partners/UNIL.png" alt="UNIL">
+            </li>
+            <li>
+                <img src="/images/cio-partners/HEIG-VD.png" alt="HEIG-VD">
+            </li>
+        </ul>
     </div>
 </div>
