--- a/index.html
+++ b/index.html
@@ -184,22 +184,27 @@ layout: default
         </ul>
 	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Loyco.png" alt="Loyco">
+                <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
             </li>
-            <li>
-                <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
+	    <li>
+                <img src="/images/cio-partners/Swisscom.png" alt="Swisscom">
             </li>
             <li>
                 <img src="/images/cio-partners/ECA.png" alt="ECA">
             </li>
             <li>
-                <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
-            </li>
-            <li>
                 <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
             </li>
+	</ul>
+	<ul class="sponsors-list come-in-module">
             <li>
-                <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
+                <img src="/images/cio-partners/Loyco.png" alt="Loyco">
+            </li>
+            <li>
+                <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
+            </li>	
+            <li>
+                <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
             </li>
         </ul>
 	<ul class="sponsors-list come-in-module">
