--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ layout: default
                 <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
             </li>
         </ul>
+	OFFICIAL PARTNERS
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
@@ -196,6 +197,7 @@ layout: default
                 <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
             </li>
 	</ul>
+	OFFICIAL PROVIDERS
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Loyco.png" alt="Loyco">
@@ -207,6 +209,7 @@ layout: default
                 <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
             </li>
         </ul>
+	INSTITUTIONAL PARTNERS
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Eracom.png" alt="Eracom">
