--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ layout: default
                 <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
             </li>
         </ul>
-	OFFICIAL PARTNERS
+	<h4 class="partners-title">OFFICIAL PARTNERS</h4>
 	<hr>
 	<ul class="sponsors-list come-in-module">
             <li>
@@ -198,7 +198,7 @@ layout: default
                 <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
             </li>
 	</ul>
-	OFFICIAL PROVIDERS
+	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
 	<hr>
 	<ul class="sponsors-list come-in-module">
             <li>
@@ -211,8 +211,8 @@ layout: default
                 <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
             </li>
         </ul>
-	INSTITUTIONAL PARTNERS
 	<hr>
+	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Eracom.png" alt="Eracom">
