--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ layout: default
             </li>
         </ul>
 	<h4 class="partners-title">OFFICIAL PARTNERS</h4>
-	<hr>
+	<hr class="hr-line">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
@@ -199,7 +199,7 @@ layout: default
             </li>
 	</ul>
 	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
-	<hr>
+	<hr class="hr-line">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Loyco.png" alt="Loyco">
@@ -211,8 +211,8 @@ layout: default
                 <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
             </li>
         </ul>
-	<hr>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
+	<hr class="hr-line">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Eracom.png" alt="Eracom">
