--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
         </div>
     </div>
 </div>
-<div class="social_feed_section social_wall" style="margin-top: 400px; padding-top: 20px;">
+<div class="social_feed_section social_wall" style="padding-top: 20px;">
     <div class='container'>
         <h1 class="h1_big_news" style="color:white;">{{ document.fragments.social_wall_title.text }}</h1>
             <div class="row">
@@ -126,16 +126,16 @@ layout: default
 	{{ document.fragments.socials_text.text }}
     </p>
     <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/in-icon-blue.png">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/in-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb-icon-blue.png">
+    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb-icon-white.png">
     </a>
     <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-blue.png">
+	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px;"  src="/images/home/yt-icon-blue.png">
+	<img height="30" style="margin-top: 30px;"  src="/images/home/yt-icon-white.png">
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
