--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@ layout: default
             </li>
         </ul>
 	<h4 class="partners-title">OFFICIAL PARTNERS</h4>
-	<hr class="hr-line" style="margin-left: 165px;">
+	<hr class="hr-line" style="margin-left: 145px;">
+	<hr style="color: white;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
@@ -199,7 +200,8 @@ layout: default
             </li>
 	</ul>
 	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
-	<hr class="hr-line" style="margin-left: 173px;">
+	<hr class="hr-line" style="margin-left: 153px;">
+	<hr style="color: white;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Loyco.png" alt="Loyco">
@@ -212,7 +214,8 @@ layout: default
             </li>
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
-	<hr class="hr-line" style="margin-left: 213px;">
+	<hr class="hr-line" style="margin-left: 188px;">
+	<hr style="color: white;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Eracom.png" alt="Eracom">
