--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ layout: default
         </ul>
 	<h4 class="partners-title">OFFICIAL PARTNERS</h4>
 	<hr class="hr-line" style="margin-left: 145px;">
-	<hr style="color: white;">
+	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
@@ -201,7 +201,7 @@ layout: default
 	</ul>
 	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
 	<hr class="hr-line" style="margin-left: 153px;">
-	<hr style="color: white;">
+	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Loyco.png" alt="Loyco">
@@ -215,7 +215,7 @@ layout: default
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
 	<hr class="hr-line" style="margin-left: 188px;">
-	<hr style="color: white;">
+	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
                 <img src="/images/cio-partners/Eracom.png" alt="Eracom">
