--- a/index.html
+++ b/index.html
@@ -195,9 +195,6 @@ layout: default
             <li>
                 <img src="/images/cio-partners/ECA.png" alt="ECA">
             </li>
-            <li>
-                <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
-            </li>
 	</ul>
 	<h4 class="partners-title">OFFICIAL PROVIDERS</h4>
 	<hr class="hr-line" style="margin-left: 153px;">
@@ -211,6 +208,14 @@ layout: default
             </li>	
             <li>
                 <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
+            </li>
+        </ul>
+	<h4 class="partners-title">INSTITUTIONAL SUPPORT</h4>
+	<hr class="hr-line" style="margin-left: 188px;">
+	<hr style="border-top: 1px solid #fff;">
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
             </li>
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
