--- a/pme.html
+++ b/pme.html
@@ -1,3 +1,18 @@
 ---
 layout: default
 ---
+
+
+<div class="pme">
+	<div class="container">
+    <h2>Devenez fan et soutenez les Jeux Olympiques de la Jeunesse Lausanne 2020 !</h2>
+ 
+    <p>Les Jeux Olympiques de la Jeunesse représentent une magnifique opportunité pour atteindre et inspirer la nouvelle génération.<br> 
+    Le Pack PME garantit à tout bon supporter l’équipement nécessaire au soutien des Jeux Olympiques d’hiver Lausanne 2020 : bonnet, parapluie, calepin et autres goodies. Vous devenez un fan & un insider. En effet, vous bénéficiez de droits de participation privilégiés avant et pendant l’événement.<br>
+    Acquérir un Pack PME, c’est partager des convictions. Et des valeurs. Afficher, en avant-première, votre fan’attitude, c’est vous inscrire dans une dynamique régionale, cantonale et nationale unique. C’est aussi montrer votre soutien à la génération montante.<br> 
+    Les 100 premières PME qui se procureront le Pack PME recevront un sésame unique pour être à nos côtés, le 9 janvier 2019, lors de la soirée de lancement « one year to go ». <br> 
+    Nous nous réjouissons de vous accueillir dans notre communauté de fans et vous invitons à télécharger le dépliant pour découvrir les détails du Pack PME : [lien] <br> 
+    <br>
+    Cliquez ici [lien] pour saisir votre commande. <br>
+  </div>
+</div>
