--- a/pme.html
+++ b/pme.html
@@ -6,6 +6,11 @@ layout: default
 <div class="pme">
   <div class="container">
     <h3 class="pme-title">Devenez fan et soutenez les Jeux Olympiques de la Jeunesse Lausanne 2020 !</h3>
+    <div class="more-news-button">
+        <a class="more-news-btn" rel="noopener noreferrer" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2">
+            Déjà décidé? Souscrivez dès maintenant!
+        </a>
+    </div>
  
     <p class="pme-text">Les Jeux Olympiques de la Jeunesse représentent une magnifique opportunité pour atteindre et inspirer la nouvelle génération. Le Pack PME garantit à tout bon supporter l’équipement nécessaire au soutien des Jeux Olympiques d’hiver Lausanne 2020 : bonnet, parapluie, calepin et autres goodies. Vous devenez un fan & un insider. <br>
     En effet, vous bénéficiez de droits de participation privilégiés avant et pendant l’événement.<br>
