--- a/pme.html
+++ b/pme.html
@@ -7,7 +7,7 @@ layout: default
   <div class="container">
     <h3 class="pme-title">Devenez fan et soutenez les Jeux Olympiques de la Jeunesse Lausanne 2020 !</h3>
     <div class="more-news-button">
-        <a class="more-news-btn" rel="noopener noreferrer" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2">
+        <a class="more-news-btn pme-bouton" rel="noopener noreferrer" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2">
             Déjà décidé? Souscrivez dès maintenant!
         </a>
     </div>
