--- a/pme.html
+++ b/pme.html
@@ -11,7 +11,7 @@ layout: default
     <div class="pme-right">  
       <div class="more-news-button">
         <a class="more-news-btn pme-bouton" rel="noopener noreferrer" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2">
-            Déjà décidé? Souscrivez dès maintenant!
+            Achat &rarr;
         </a>
       </div>
     </div>
