--- a/pme.html
+++ b/pme.html
@@ -9,7 +9,7 @@ layout: default
       <h3 class="pme-title">Devenez fan et soutenez les Jeux Olympiques de la Jeunesse Lausanne 2020 !</h3>
     </div>
     <div class="pme-right">  
-      <div class="more-news-button">
+      <div class="more-news-button more-pme">
         <a class="more-news-btn pme-bouton" rel="noopener noreferrer" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2">
             Achat &rarr;
         </a>
