--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ layout: default
     <img width="100%" src="/images/home/Benevoles.png">
 </div>
 <div class="socials_left col-md-6 col-sm-12" style="padding-left: 100px; padding-right: 50px; height: 400px; background-color: #CF0072;">
-    <h3 style="margin-top: 40px !important;">
+    <h3 class="first-title" style="margin-top: 40px !important;">
     	<img height="60" style="margin-right: 20px;" src="/images/home/collab.png">
 	{{ document.fragments.socials_header1.text }}
     </h3>
-    <h3 style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.socials_header2.text }}</h3>
+    <h3 class="second-title" style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.socials_header2.text }}</h3>
     <p>
 	{{ document.fragments.socials_text.text }}
     </p>
@@ -140,11 +140,11 @@ layout: default
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-right: 50px; padding-bottom: 0px; padding-left: 100px; background-color: #0088CE; height: 400px;">
-    <h3 style="margin-top: 40px !important;">
+    <h3 class="first-title" style="margin-top: 40px !important;">
 	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
     </h3>
-    <h3 style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.newsletter_text.text }}</h3>
+    <h3 class="second-title" style="margin-top: 20px !important; font-weight: normal;">{{ document.fragments.newsletter_text.text }}</h3>
     <p>{{ document.fragments.newsletter_heading.text }}</p>
     {% if site.lang == "fr-fr" %}
     	<form class="newsletter_cta_form form flex stretch" action="https://lausanne2020.us15.list-manage.com/subscribe/post?u=0fa74011acb0c15df90b53c26&amp;id=5f3f817214" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
