--- a/medias.html
+++ b/medias.html
@@ -26,6 +26,7 @@ layout: default
       {% endif %}
       <div class="prelease">
         {% if site.lang == "fr-fr" %}
+          <a href="/images/home/20181014_Communiqué_de_presse_PB.pdf" target="_blank" rel="noopener">14.10.2018 : Décès de Patrick Baumann, Président du Comité d’organisation de Lausanne 2020</a><br>
           <a href="/images/home/Lausanne2020_CP_03.10.2018.pdf" target="_blank" rel="noopener">03.10.2018 : Trois ambassadeurs et de nouveaux partenaires pour Lausanne 2020</a><br>
           <a href="/images/home/Lausanne2020_CP_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Les sites hôtes en pleine confiance à 17 mois de l'évènement</a><br>
           <a href="/images/home/Lausanne2020.CP.09.04.2018._FR.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 en avance sur son calendrier</a><br>
@@ -36,6 +37,7 @@ layout: default
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="/images/home/20181014_Press_release_PB.pdf" target="_blank" rel="noopener">14.10.2018 : Death of Patrick Baumann, President of the Lausanne 2020 Organising Committee</a><br>
           <a href="/images/home/Lausanne2020_CP_03.10.2018_EN.pdf" target="_blank" rel="noopener">03.10.2018 : Three ambassadors and a host of new partners for Lausanne 2020</a><br>
           <a href="/images/home/Lausanne2020_PR_15.08.2018.pdf" target="_blank" rel="noopener">15.08.2018 : Preparation Events to Take Place This Winter in Most Competition Sites</a><br>
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_ENG.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Our promise becomes reality"</a><br>
