--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ layout: default
     </div>
     <img width="100%" src="/images/home/Benevoles.png">
 </div>
-<div class="socials_left col-md-6 col-sm-12" style="padding-left: 100px; padding-right: 50px; height: 400px; background-color: #CF0072;">
+<div class="socials_left col-md-6 col-sm-12">
     <h3 class="first-title" style="margin-top: 40px !important;">
     	<img height="60" style="margin-right: 20px;" src="/images/home/collab.png">
 	{{ document.fragments.socials_header1.text }}
@@ -139,7 +139,7 @@ layout: default
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-<div class="newsletter_cta col-md-6 col-sm-12" style="padding-top: 0px !important; padding-right: 50px; padding-bottom: 0px; padding-left: 100px; background-color: #0088CE; height: 400px;">
+<div class="newsletter_cta col-md-6 col-sm-12">
     <h3 class="first-title" style="margin-top: 40px !important;">
 	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
