--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: default
     <img width="100%" src="/images/home/Benevoles.png">
 </div>
 <div class="socials_left col-md-6 col-sm-12">
-    <h3 class="first-title" style="margin-top: 40px !important;">
+    <h3 class="first-title" style="margin-top: 40px;">
     	<img height="60" style="margin-right: 20px;" src="/images/home/collab.png">
 	{{ document.fragments.socials_header1.text }}
     </h3>
@@ -140,7 +140,7 @@ layout: default
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <div class="newsletter_cta col-md-6 col-sm-12">
-    <h3 class="first-title" style="margin-top: 40px !important;">
+    <h3 class="first-title" style="margin-top: 40px ;">
 	<img height="60" style="margin-right: 20px;" src="/images/home/nl.png">
 	{{ document.fragments.newsletter_header1.text }}
     </h3>
