--- a/index.html
+++ b/index.html
@@ -215,6 +215,26 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
+                <img src="/images/cio-partners/Ville_Lausanne.png" alt="Ville de Lausanne">
+            </li>
+        </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Swiss_Olympic.png" alt="Swiss Olympic">
+            </li>
+        </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Canton_Vaud.png" alt="Canton de Vaud">
+            </li>
+        </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
+                <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
+            </li>
+        </ul>
+	<ul class="sponsors-list come-in-module">
+            <li>
                 <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
             </li>
         </ul>
