--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@ layout: default
 	{{ document.fragments.socials_text.text }}
     </p>
     <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;" src="/images/home/in-icon-white.png">
+	<img height="45" style="margin-top: 30px; margin-right: 20px;" src="/images/home/in-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-    	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb-icon-white.png">
+    	<img height="45" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/fb-icon-white.png">
     </a>
     <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-white.png">
+	<img height="45" style="margin-top: 30px; margin-right: 20px;"  src="/images/home/tw-icon-white.png">
     </a>
     <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	<img height="30" style="margin-top: 30px;"  src="/images/home/yt-icon-white.png">
+	<img height="45" style="margin-top: 30px;"  src="/images/home/yt-icon-white.png">
     </a>
 </div>
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
@@ -158,7 +158,7 @@ layout: default
 	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     </div>
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0fa74011acb0c15df90b53c26_5f3f817214" tabindex="-1" value=""></div>
-    <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" class="newsletter_cta_btn btn"></div>
+    <div class="newsletter-form-button"><input type="submit" value="{{ document.fragments.newsletter_submit_button.text }}" name="subscribe" class="newsletter_cta_btn btn" style="font-size: 20px;"></div>
     </form>
     <p>{{ document.fragments.newsletter_gdpr.text }}</p>
 </div>
