--- a/medias.html
+++ b/medias.html
@@ -69,6 +69,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-novembre-2018" target="_blank" rel="noopener"> Novembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-septembre-2018" target="_blank" rel="noopener"> Septembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-aout-2018" target="_blank" rel="noopener"> Août 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-juillet-2018" target="_blank" rel="noopener"> Juillet 2018 </a><br>
@@ -80,6 +81,7 @@ layout: default
           <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/lausanne2020/newsletter-november-2018-de" target="_blank" rel="noopener"> November 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-september-de" target="_blank" rel="noopener"> September 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-august-2018" target="_blank" rel="noopener"> August 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-juli-2018" target="_blank" rel="noopener"> Juli 2018 </a><br>
@@ -90,6 +92,7 @@ layout: default
           <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/lausanne2020.com/newsletter-november-2018-en" target="_blank" rel="noopener"> November 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-september-en" target="_blank" rel="noopener"> September 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-august-2018-en" target="_blank" rel="noopener"> August 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-july-2018" target="_blank" rel="noopener"> July 2018 </a><br>
