--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ layout: default
         </div>
     </div>
 </div>	
+<div class="agenda">
+    <div class="container">
+	<h1 class="h1_agenda">Agenda</h1>
+	<div class="row">
+	    test
+	</div>
+    </div>
+</div>
 <div class="volunteers_big" style="text-align: center;">
     <div class="volunteers_text" style="position: absolute; margin-top: 15vw; text-align: center;">
 	<p style="font-weight: bold;">{{ document.fragments.volunteers_text.text }}</p>
