--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@ layout: default
     <div class="container">
 	<h1 class="h1_agenda">Agenda</h1>
 	<div class="row">
-	    test
+	    <h3 class="h3_agenda">Novembre</h3>
+	    <ul>
+	    	<li>123asdf</li>
+	    	<li>123asdf</li>
+	    	<li>123asdf</li>
+	    </ul>
+	    <hr>
+	    <h3 class="h3_agenda">Décembre</h3>
+	    <ul>
+	    	<li>123asdf</li>
+	    	<li>123asdf</li>
+	    	<li>123asdf</li>
+	    </ul>
 	</div>
     </div>
 </div>
