--- a/index.html
+++ b/index.html
@@ -108,8 +108,24 @@ layout: default
     <div class="container">
 	<h1 class="h1_agenda">Agenda</h1>
 	<div class="row">
-	    <h3 class="h3_agenda">Novembre</h3>
+	    <h3 class="h3_agenda">Décembre 2018</h3>
 	    <ul>
+	    	<li>FIS Ski Jumping WC Ladies</li>
+	    	<li>IBU Biathlon Junior Cup</li>
+	    </ul>
+	    <hr>
+	    <h3 class="h3_agenda">Janvier 2019</h3>
+	    <ul>
+	    	<li>8 janvier 2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
+		<li>9 janvier 2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
+	    	<li>FIL Luge ITW</li>
+	    	<li>Audi Skicross Tour & FIS Europa Cup</li>
+	    	<li>FIL Luge Junior World Cup</li>
+	    	<li>Speed Skating Swiss Championships</li>
+	    	<li>Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</li>
+	    	<li>Journée officielle Pre YOG Event</li>
+	    	<li>IBSF World Cup</li>
+	    	<li>Alpine Skiing FIS Europa Cup (SG/SC)</li>
 	    	<li>123asdf
 			<div title="Add to Calendar" class="addeventatc">
     Add to Calendar
@@ -119,17 +135,7 @@ layout: default
     <span class="title">Summary of the event</span>
     <span class="description">Description of the event</span>
     <span class="location">Location of the event</span>
-</div>
-		</li>
-	    	<li>123asdf</li>
-	    	<li>123asdf</li>
-	    </ul>
-	    <hr>
-	    <h3 class="h3_agenda">Décembre</h3>
-	    <ul>
-	    	<li>123asdf</li>
-	    	<li>123asdf</li>
-	    	<li>123asdf</li>
+</div></li>
 	    </ul>
 	</div>
     </div>
