--- a/index.html
+++ b/index.html
@@ -110,22 +110,45 @@ layout: default
 	<div class="row">
 	    <h3 class="h3_agenda">Décembre 2018</h3>
 	    <ul>
+		<li></li>
 	    	<li>FIS Ski Jumping WC Ladies</li>
+		<li></li>
+		<li></li>
 	    	<li>IBU Biathlon Junior Cup</li>
 	    </ul>
 	    <hr>
 	    <h3 class="h3_agenda">Janvier 2019</h3>
 	    <ul>
-	    	<li>8 janvier 2019 : Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
-		<li>9 janvier 2019 : One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
+		<li>8 janvier 2019 :</li>
+		<li>Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
+		<li></li>
+		<li>9 janvier 2019 : </li>
+		<li>One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
+		<li></li>
+		<li>08 au 13.01.2019</li>
 	    	<li>FIL Luge ITW</li>
+		<li></li>
+		<li>11 au 13.01.2019</li>
 	    	<li>Audi Skicross Tour & FIS Europa Cup</li>
+		<li></li>
+		<li>14 au 19.01.2019</li>
 	    	<li>FIL Luge Junior World Cup</li>
+		<li></li>
+		<li>19 au 20.01.2019</li>
 	    	<li>Speed Skating Swiss Championships</li>
+		<li></li>
+		<li>19 au 20.01.2019</li>
 	    	<li>Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</li>
+		<li></li>
+		<li>26/01/2019</li>
 	    	<li>Journée officielle Pre YOG Event</li>
+		<li></li>
+		<li>21 au 27.01.2019</li>
 	    	<li>IBSF World Cup</li>
+		<li></li>
+		<li>28 (inauguration) au 29.01.2019</li>
 	    	<li>Alpine Skiing FIS Europa Cup (SG/SC)</li>
+		<li></li>
 	    	<li>123asdf
 			<div title="Add to Calendar" class="addeventatc">
     Add to Calendar
