--- a/index.html
+++ b/index.html
@@ -110,75 +110,91 @@ layout: default
 	<div class="row">
 	    <h3 class="h3_agenda">Décembre 2018</h3>
 	    <ul>
-		<li></li>
-	    	<li>FIS Ski Jumping WC Ladies</li>
-		<li></li>
-		<li></li>
-	    	<li>IBU Biathlon Junior Cup</li>
+		<li>14 au 16.12.2018</li>
+		<ul>
+	    	    <li>FIS Ski Jumping WC Ladies</li>
+		    <li>Les Tuffes</li>
+		</ul>
+		<br>
+		<li>19 au 23.12.2018</li>
+	    	<ul>
+	    	    <li>IBU Biathlon Junior Cup</li>
+		    <li>Les Tuffes</li>
+		</ul>
 	    </ul>
 	    <hr>
 	    <h3 class="h3_agenda">Janvier 2019</h3>
 	    <ul>
-		<li>8 janvier 2019 :</li>
+		<li>08.01.2019 :</li>
 		<ul>
 		    <li>Lancement officiel de la mascotte L2020, Patinoire de Malley (LHC-HC Davos), 19h00-22h30</li>
 		</ul>
-		<li>9 janvier 2019 : </li>
+		<br>
+		<li>09.01.2019 : </li>
 		<ul>
 		    <li>One Year to Go, Quartier du Flon (Esplanade du Flon, Lausanne), 16h00-22h30</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>08 au 13.01.2019</li>
 	    	<ul>
 		    <li>FIL Luge ITW</li>
+		    <li>St-Moritz</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>11 au 13.01.2019</li>
 	    	<ul>
 		    <li>Audi Skicross Tour & FIS Europa Cup</li>
+		    <li>Villars</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>14 au 19.01.2019</li>
 	    	<ul>
 		    <li>FIL Luge Junior World Cup</li>
+		    <li>St-Moritz</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>19 au 20.01.2019</li>
 	    	<ul>
 		    <li>Speed Skating Swiss Championships</li>
+		    <li>St-Moritz</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>19 au 20.01.2019</li>
 	    	<ul>
 		    <li>Slopestyle Swiss-ski Freestyle Ski Tour & Audi Snowboard Tour</li>
+		    <li>Leysin</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>26/01/2019</li>
 	    	<ul>
 		    <li>Journée officielle Pre YOG Event</li>
+		    <li>Leysin</li>
 		</ul>
-		<li></li>
+		<br>
 		<li>21 au 27.01.2019</li>
 	    	<ul>
 		    <li>IBSF World Cup</li>
+		    <li>St-Moritz</li>
 		</ul>
-		<li></li>
-		<li>28 (inauguration) au 29.01.2019</li>
+		<br>
+		<li>28 au 29.01.2019</li>
 		</ul>
 	    	<ul>
 		    <li>Alpine Skiing FIS Europa Cup (SG/SC)</li>
+		    <li>Les Diablerets</li>
 		</ul>
-		<li></li>
+		<br>
 	    	<li>123asdf
-			<div title="Add to Calendar" class="addeventatc">
-    Add to Calendar
-    <span class="start">11/29/2018 08:00 AM</span>
-    <span class="end">11/29/2018 10:00 AM</span>
-    <span class="timezone">America/Los_Angeles</span>
-    <span class="title">Summary of the event</span>
-    <span class="description">Description of the event</span>
-    <span class="location">Location of the event</span>
-</div></li>
+		    <div title="Add to Calendar" class="addeventatc">
+    			Add to Calendar
+    			<span class="start">11/29/2018 08:00 AM</span>
+    			<span class="end">11/29/2018 10:00 AM</span>
+		    	<span class="timezone">America/Los_Angeles</span>
+		    	<span class="title">Summary of the event</span>
+		    	<span class="description">Description of the event</span>
+		    	<span class="location">Location of the event</span>
+		    </div>
+		</li>
 	    </ul>
 	</div>
     </div>
