--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@ layout: default
 	    	    <li>FIS Ski Jumping WC Ladies</li>
 		    <li>Les Tuffes</li>
 		</ul>
+		<li>
+		    <div title="Add to Calendar" class="addeventatc calendrier">
+    			Add to Calendar
+    			<span class="start">11/29/2018 08:00 AM</span>
+    			<span class="end">11/29/2018 10:00 AM</span>
+		    	<span class="timezone">America/Los_Angeles</span>
+		    	<span class="title">Summary of the event</span>
+		    	<span class="description">Description of the event</span>
+		    	<span class="location">Location of the event</span>
+		    </div>
+		</li>
+		</li>
 		<br>
 		<li>19 au 23.12.2018</li>
 	    	<ul>
@@ -183,18 +195,6 @@ layout: default
 		    <li>Alpine Skiing FIS Europa Cup (SG/SC)</li>
 		    <li>Les Diablerets</li>
 		</ul>
-		<br>
-	    	<li>123asdf
-		    <div title="Add to Calendar" class="addeventatc">
-    			Add to Calendar
-    			<span class="start">11/29/2018 08:00 AM</span>
-    			<span class="end">11/29/2018 10:00 AM</span>
-		    	<span class="timezone">America/Los_Angeles</span>
-		    	<span class="title">Summary of the event</span>
-		    	<span class="description">Description of the event</span>
-		    	<span class="location">Location of the event</span>
-		    </div>
-		</li>
 	    </ul>
 	</div>
     </div>
